# nec

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  doxygen.txt  sub_update.sh
cmake/: clean-all.cmake  doxygen.cmake  package.cmake  tk.cmake
src/: CMakeLists.txt  nec.c  nec_config.h.in  nec_utils.c  nec_utils.h
